Fix bug in spacing implementation @2e94685

--- a/lmchallenge/data/lmc.css
+++ b/lmchallenge/data/lmc.css
@@ -9,7 +9,7 @@
     white-space: pre;
 }
 .word.spaced {
-    margin-right: .5em;
+    margin-left: .5em;
 }
 
 .filtered {
